# jswag

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Quersumme.java  README.md
examples/: HelloWorld.java  Quersumme.java
src/: args.rs  config.rs  diagnostics.rs  dispatch.rs  filemap.rs  job.rs  main.rs  ui.rs  util.rs
src/analyze/: mod.rs
src/check/: mod.rs
src/java/: inner.rs  mod.rs
src/style/: mod.rs
src/syntax/: ast.rs  lex.rs  lexer.rs  mod.rs  parse.rs  parser.rs  token.rs
src/syntax/test/: lex.rs  mod.rs
