[package]
name = "jswag"
version = "0.3.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

description = "Java style checker and static analyzer"
repository = "https://github.com/LukasKalbertodt/jswag"
license = "MIT"

[dependencies]
docopt = "0.6"
env_logger = "0.3"
log = "0.3"
rustc-serialize = "0.3"
term-painter = "0.2"
xswag-base = "0.3"
xswag-syntax-java = "0.3"
